# nova-adk-agent

./: .env.example  .gitignore  Dockerfile.airgap  README.md  pyproject.toml  requirements.txt
.github/workflows/: eval.yml
docs/: A2A-MCP-BRIDGE.md  A2A.md  DEPLOY.md  OPEN-WEIGHT-FALLBACK.md  SECURITY-VARIANT.md  WEEK1.md  WRITEUP.md
docs/posts/: week1-draft.md  week2-draft.md  week3-draft.md  week4-draft.md
eval/: README.md  dataset.py  run.py
nova_adk_agent/: __init__.py  __main__.py  hello.py  profile.py  summarize.py  summarize_text.py  transcript.py
nova_adk_agent/a2a/: client_agent.py  server_agent.py
nova_adk_agent/agents/: __init__.py  coordinator.py  formatter.py  summarizer.py
nova_adk_agent/bridges/: a2a_mcp.py
nova_adk_agent/deploy/: config.yaml  requirements.txt  vertex.py
nova_adk_agent/routing/: router.py
scripts/: smoketest.sh
tests/: test_a2a_wireup.py  test_agents_wireup.py  test_bridge_stub.py  test_deploy_config.py  test_eval_harness.py  test_router.py
tests/fixtures/: sample_transcript.txt
